--- a/Project/Source/Presentation/Kana/Kana.storyboard
+++ b/Project/Source/Presentation/Kana/Kana.storyboard
@@ -28,15 +28,16 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aWh-ki-sO0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="802"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PyP-bo-kWn">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="PyP-bo-kWn">
                                     <size key="itemSize" width="128" height="128"/>
+                                    <size key="estimatedItemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="TD6-xs-47V">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <rect key="frame" x="5" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mvv-7p-0Pc">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -49,13 +50,13 @@
                         <viewLayoutGuide key="safeArea" id="feT-KV-bBe"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="feT-KV-bBe" firstAttribute="trailing" secondItem="aWh-ki-sO0" secondAttribute="trailing" id="6Q2-P1-1d1"/>
+                            <constraint firstItem="fwK-Jp-f0j" firstAttribute="top" secondItem="aWh-ki-sO0" secondAttribute="bottom" id="8qB-Kf-OCC"/>
                             <constraint firstItem="fwK-Jp-f0j" firstAttribute="leading" secondItem="feT-KV-bBe" secondAttribute="leading" id="JnC-SJ-FvF"/>
+                            <constraint firstItem="aWh-ki-sO0" firstAttribute="top" secondItem="feT-KV-bBe" secondAttribute="top" id="Yi3-FF-bfd"/>
                             <constraint firstAttribute="bottom" secondItem="fwK-Jp-f0j" secondAttribute="bottom" id="adS-xk-wbA"/>
-                            <constraint firstItem="feT-KV-bBe" firstAttribute="trailing" secondItem="aWh-ki-sO0" secondAttribute="trailing" id="cIh-SH-mG5"/>
-                            <constraint firstItem="aWh-ki-sO0" firstAttribute="leading" secondItem="feT-KV-bBe" secondAttribute="leading" id="dL8-cM-Z9Z"/>
-                            <constraint firstItem="fwK-Jp-f0j" firstAttribute="top" secondItem="aWh-ki-sO0" secondAttribute="bottom" id="r4F-3D-BrX"/>
                             <constraint firstItem="fwK-Jp-f0j" firstAttribute="trailing" secondItem="feT-KV-bBe" secondAttribute="trailing" id="rCb-dX-TRH"/>
-                            <constraint firstItem="aWh-ki-sO0" firstAttribute="top" secondItem="feT-KV-bBe" secondAttribute="top" id="rQY-fB-nkA"/>
+                            <constraint firstItem="aWh-ki-sO0" firstAttribute="leading" secondItem="feT-KV-bBe" secondAttribute="leading" id="w0R-5L-vbX"/>
                         </constraints>
                     </view>
                     <connections>
